--- a/src/ui/Heading.module.css
+++ b/src/ui/Heading.module.css
@@ -2,6 +2,7 @@
   font-size: 3rem;
   font-weight: 600;
   line-height: 1.4;
+  color: var(--color-grey-900);
 }
 
 .h2 {
