--- a/src/ui/Label.module.css
+++ b/src/ui/Label.module.css
@@ -1,3 +1,4 @@
 .label {
   font-weight: 500;
+  color: var(--color-grey-800);
 }
